- Retrofit Okhttp Interceptor 연결

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">끝말잇기 족보</string>
+
+    <string name="open_dic_key">2B5D64859844E78AAE2BA1D19329540F</string>
 </resources>
